--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,47 @@
 nav {
-    background-color: darkolivegreen;
+    background-color: #5B6D49;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    padding: 0 16px;
+    color: white;
 }
 body {
     margin: 0;
+    background-color: #e9e5db;
 }
 .container {
     display: grid;
     grid-template-columns: 50% 50%;
+    padding: 0 16px;
+}
+.function {
+    display: grid;
+    grid-template-columns: 50% 50%;
+    padding: 0 16px;
+    color: #4D4D41;
+    font-size: smaller;
+}
+#my-title {
+    color: rgb(92, 136, 15);
+}
+.addimg {
+    display: flex;
+    align-items: center;
+    gap: 15px;
+}
+.icon {
+    width: 70px;
+    height: 70px;
+    margin-top: 10px;
+}
+textarea {
+  width: 98%;
+  height: 300px;
+  border: 2px solid #ccc;
+  font-size: 14px;
+  background-color: #fafafa;
+  resize: vertical;
+  margin: 0 auto;
+  display: block;
 }
